Fixes knockout section spacing

--- a/public/css/module/_box.scss
+++ b/public/css/module/_box.scss
@@ -1,11 +1,7 @@
-.knockout {
-  padding-bottom: 30em;
-}
-
 .box-container {
-  perspective: 1000;
-  height: 30em;
-  margin: -20em auto 20em auto;
+  perspective: 1230;
+  // height: 30em;
+  margin: 0 auto 25em auto;
 }
 
 .box {
